--- a/helloworld.yml
+++ b/helloworld.yml
@@ -3,6 +3,11 @@
   hosts: all
 
   tasks:
+  - name: run show version on remote devices
+    ios_command:
+      commands: show version
 
-  - name: Hello World!
-    shell: echo "Hi! Tower is working!"
+  - name: run show version and check to see if output contains IOS
+    ios_command:
+      commands: show version
+      wait_for: result[0] contains IOS
