--- a/helloworld.yml
+++ b/helloworld.yml
@@ -3,11 +3,6 @@
   hosts: all
 
   tasks:
-  - name: run show version on remote devices
-    ios_command:
-      commands: show version
-
-  - name: run show version and check to see if output contains IOS
-    ios_command:
-      commands: show version
-      wait_for: result[0] contains IOS
+- name: run show version on remote devices
+  nxos_command:
+    commands: show version
