--- a/helloworld.yml
+++ b/helloworld.yml
@@ -1,4 +1,2 @@
----
 - name: run show version on remote devices
-  nxos_command:
-    commands: show version
+  nxos_command: {commands: show version}
